crates/toml_edit/tests/snapshots/invalid/integer/arabic-zero-01.stderr
TOML parse error at line 1, column 18
  |
1 | arabic-zero-01 = 1٠
  |                  ^^^
string values must be quoted, expected literal string
